Cycles & BI have broken UVs in some degenerated quads cases #47198

Closed
opened 2016-01-18 01:34:56 +01:00 by Guillaume Lussier-Dulude · 8 comments

Here my file
Route1.blend
ImageDemonstration.jpg

System Information
Operating system and graphics card
Windows 10
NVIDIA GeForce GTX 770

Blender Version
Broken: (2.76b f337fea)

Short description of error
The viewport shading texture or material is different from the render after I UV Unwrap my mesh.

Exact steps for others to reproduce the error
1- I create a spin from an edge (in the mesh tool) because a want creates a street in 90 degrees.
2- I UV Unwrap the asphalt part of my street and I adjust the UV to be more rectangle and ajust with the curve of my street.

Every time I UV Unwrap, the render is glitches and it looks like every polygon has its own UV. Even after creating another project.

The only way I discover to “remove” this bug is:
1- Use the mirror modifier and press the apply button.
2- And remove the old mesh or there a bug
So basically, I use the objet create by the modifier because the UV work properly.

Thank you

**Here my file** [Route1.blend](https://archive.blender.org/developer/F275043/Route1.blend) ![ImageDemonstration.jpg](https://archive.blender.org/developer/F275044/ImageDemonstration.jpg) **System Information** Operating system and graphics card Windows 10 NVIDIA GeForce GTX 770 **Blender Version** Broken: (2.76b f337fea) **Short description of error** The viewport shading texture or material is different from the render after I UV Unwrap my mesh. **Exact steps for others to reproduce the error** **1-** I create a spin from an edge (in the mesh tool) because a want creates a street in 90 degrees. **2-** I UV Unwrap the asphalt part of my street and I adjust the UV to be more rectangle and ajust with the curve of my street. Every time I UV Unwrap, the render is glitches and it looks like every polygon has its own UV. Even after creating another project. **The only way I discover to “remove” this bug is:** **1-** Use the mirror modifier and press the apply button. **2-** And remove the old mesh or there a bug So basically, I use the objet create by the modifier because the UV work properly. Thank you

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GuillaumeL-D

Added subscriber: @GuillaumeL-D

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm that issue, with both Cycles and internal, and in current master as well, weird… :/

Can confirm that issue, with both Cycles and internal, and in current master as well, weird… :/
Bastien Montagne self-assigned this 2016-01-19 14:46:26 +01:00

Problem is coming from those degenerated triangles you are creating with those quads-as-tris 'trick'. Looks like during tessellation, UVs from 'degenerated' tri are used, instead of 'good' ones.

Also interesting, if you mirror the mirror copy, you have the issue again.

Problem is coming from those degenerated triangles you are creating with those quads-as-tris 'trick'. Looks like during tessellation, UVs from 'degenerated' tri are used, instead of 'good' ones. Also interesting, if you mirror the mirror copy, you have the issue again.

Added subscribers: @Sergey, @brecht, @ThomasDinges

Added subscribers: @Sergey, @brecht, @ThomasDinges
Bastien Montagne changed title from The viewport shading texture or material is different from the render after I UV Unwrap my mesh. to Cycles & BI have broken UVs in some degenerated quads cases 2016-01-19 19:44:14 +01:00

This issue was referenced by bf5ddb9728

This issue was referenced by bf5ddb9728ef3eeed680399ab4d0f7aa59fe1fa4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47198
No description provided.